// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH gGyzVw"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH tLjSM"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH cmvcxy"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH begKAY"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`giant\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH kjUCpq"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH edATGg"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH cmvcxy"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH cmvcxy"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH kKjtef"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH hexTtb"
  disabled={false}
  name="text"
/>
`;
